[blink] Skip ancestor clip in PaintLayerPainter for squashed layers.

The squashing layer passed a differrent painting root that is not the same
as the backing's space when painting squashed layers, thus a wrong clip
is applied when squashed layers are painted.

This was not a problem prior to GeometryMapper-based PaintLayerClipper
because the non-GM PaintLayerClipper skipped visual rect optimization
in this particular corner case.

BUG=712783
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2830013007
Cr-Commit-Position: refs/heads/master@{#467220}

Former-commit-id: fb28c1b7511ceeb4d47ed42dbeb0676591469fe6